--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./assets/css/style.scss">
+    <link rel="stylesheet" href="./assets/css/root.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="bg-black">
     <!-- Section Real Estate -->
-    <section class="bg-black min-vh-100">
+    <section class="min-vh-100">
       <div class="container bg-white p-0">
-        <div class="row">
-          <div class="col-6">
-            <img src="./assets/img/Homepage/svg/deal-bg-mb.svg" alt="">
+        <div class="row bg-black p-0">
+          <div class="col-5 bg-white p-0">
+            <img class="w-100" src="./assets/img/Homepage/svg/deal-bg-mb.svg" alt="">
           </div>
-          <div class="col-6">
-
+          <div class="col-6 bg-white p-0">
+            <div class="d-flex align-items-center mt-4">
+              <hr class="peach-hr" />
+              <p class="font-uppercase fs_xsm letter-03 ms-2 color-peach mb-0">
+                We deal with
+              </p>
+            </div>
           </div>
         </div>
       </div>
