--- a/index.html
+++ b/index.html
@@ -20,10 +20,28 @@
           <div class="col-6 bg-white p-0">
             <div class="d-flex align-items-center mt-4">
               <hr class="peach-hr" />
-              <p class="font-uppercase fs_xsm letter-03 ms-2 color-peach mb-0">
+              <p class=" fs_xsm ">
                 We deal with
               </p>
             </div>
+            <h2 class="">Real Estate</h2>
+            <p class="font-opacity font-21 letter-0-3 mt-4">
+              Purchases and Sales of Commercial and<br />
+              Residential Properties
+            </p>
+            <hr class="grey-hr" />
+                <p class="font-opacity font-21 letter-0-3">
+                  General Counseling to Cooperatives and<br />
+                  Condominiums
+                </p>
+                <hr class="grey-hr" />
+                <p class="font-opacity font-21 letter-0-3">Leasing</p>
+                <hr class="grey-hr" />
+                <p class="font-opacity font-21 letter-0-3">Syndication</p>
+                <hr class="grey-hr" />
+                <p class="font-opacity font-21 letter-0-3">Financing</p>
+                <hr class="grey-hr" />
+                <p class="font-opacity font-21 letter-0-3">Loan Work-Outs</p>
           </div>
         </div>
       </div>
