--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./assets/css/style.scss">
     <link rel="stylesheet" href="./assets/css/root.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -12,7 +11,7 @@
   <body class="bg-black">
     <!-- Section Real Estate -->
     <section class="min-vh-100">
-      <div class="container bg-white p-0">
+      <div class="custom_container bg-white p-0">
         <div class="row bg-black p-0">
           <div class="col-5 bg-white p-0">
             <img class="w-100" src="./assets/img/Homepage/svg/deal-bg-mb.svg" alt="">
@@ -24,7 +23,7 @@
                 We deal with
               </p>
             </div>
-            <h2 class="">Real Estate</h2>
+            <h2 class="my_para">Real Estate</h2>
             <p class="font-opacity font-21 letter-0-3 mt-4">
               Purchases and Sales of Commercial and<br />
               Residential Properties
