--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
 
 <body class=" bg-black">
     <div class=" position-relative min_h_890 overflow-hidden">
-        <div class=" z-n1">
+        <div class=" z-n1 d-lg-block d-none">
             <img class=" header_bg " src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
             <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp" alt=" characters_img">
         </div>
@@ -21,7 +21,7 @@
                 <div class=" row">
                     <div class=" col-lg-2 p-5">
                         <div>
-                            <img class=" logo_w_180" src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
+                            <img class=" logo_w_18 0" src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
                         </div>
                         <label for="menuicon">
                             <span></span>
@@ -45,7 +45,7 @@
 
                         </ul>
                     </div>
-                    <div class=" col-lg-5 mt-3 pt-5 z-1 position-relative border-grey-left  ">
+                    <div class=" col-lg-5 mt-3 pt-5 z-1 position-relative   border-grey-left  ">
                         <div class="">
 
                         </div>
@@ -59,12 +59,12 @@
                             <img src="./assets/img/Homepage/svg/scroll-down.svg" alt=" scroll_down">
                         </div>
                     </div>
-                    <!-- <div class=" col-lg-5 z-2   ">
+                    <div class=" col-lg-5 z-2 d-lg-none   ">
                         <img class="characters_img z-n1   " src="./assets/img/Homepage/svg/header-bg.svg"
                             alt=" header_bg">
                         <img class=" " src="./assets/img/Homepage/webp/characters-home.webp" alt=" characters_img">
 
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </nav>
