--- a/index.html
+++ b/index.html
@@ -1,47 +1,147 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./assets/css/root.css">
+  <!-- Primary Meta Tags -->
+<title>BF Law Firm</title>
+<meta name="title" content="BF Law Firm" />
+<meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="BF Law Firm" />
+<meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
+<meta property="og:image" content="https://thumbs2.imgbox.com/a5/d5/kCbhx0K6_t.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="BF Law Firm" />
+<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
+<meta property="twitter:image" content="https://thumbs2.imgbox.com/a5/d5/kCbhx0K6_t.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+    <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="icon" href="./assets/img/Homepage/svg/dollar-img.svg">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body class="bg-black">
     <!-- Section Real Estate -->
-    <section class="min-vh-100">
-      <div class="custom_container bg-white p-0">
+    <section class="">
+      <div class="custom_container bg-white">
         <div class="row bg-black p-0">
-          <div class="col-5 bg-white p-0">
-            <img class="w-100" src="./assets/img/Homepage/svg/deal-bg-mb.svg" alt="">
+          <div class="col-md-6 bg-white p-0">
+            <img class="img_wdth_section_real" src="./assets/img/Homepage/svg/deal-bg-mb.svg" alt="">
           </div>
-          <div class="col-6 bg-white p-0">
-            <div class="d-flex align-items-center mt-4">
-              <hr class="peach-hr" />
-              <p class=" fs_xsm ">
+          <div class="col-md-6 bg-white p-sm-0 ps-lg-5 col_border_right_bottom ">
+           <div class="ps-sm-3 ps-md-5 p-md-3 pb-4 pb-lg-0">
+            <div class="d-flex align-items-center mt-4 mt-md-0 mt-lg-4">
+              <div class="line_heading"></div>
+              <p class=" fs_xsm Letter_space_03 ms-2 color_peach text-uppercase fw_700 font_roboto">
                 We deal with
               </p>
             </div>
-            <h2 class="my_para">Real Estate</h2>
-            <p class="font-opacity font-21 letter-0-3 mt-4">
+            <h2 class="text-black line_height_100 letter_space_01 fw_700 fs_3xl font_roboto">Real Estate</h2>
+            <p class="font_opacity_07 fs_lght fw_600 line_height_100 text-black  mt-4 font_roboto">
               Purchases and Sales of Commercial and<br />
               Residential Properties
             </p>
             <hr class="grey-hr" />
-                <p class="font-opacity font-21 letter-0-3">
+                <p class="font_opacity_07 fs_lght fw_600 line_height_100 text-black ">
                   General Counseling to Cooperatives and<br />
                   Condominiums
                 </p>
                 <hr class="grey-hr" />
-                <p class="font-opacity font-21 letter-0-3">Leasing</p>
+                <p class="font_opacity_07 fs_lght fw_600 line_height_100 font_roboto text-black ">Leasing</p>
                 <hr class="grey-hr" />
-                <p class="font-opacity font-21 letter-0-3">Syndication</p>
+                <p class="font_opacity_07 fs_lght fw_600 line_height_100 font_roboto text-black ">Syndication</p>
                 <hr class="grey-hr" />
-                <p class="font-opacity font-21 letter-0-3">Financing</p>
+                <p class="font_opacity_07 fs_lght fw_600 line_height_100 font_roboto text-black ">Financing</p>
                 <hr class="grey-hr" />
-                <p class="font-opacity font-21 letter-0-3">Loan Work-Outs</p>
+                <p class="font_opacity_07 fs_lght fw_600 line_height_100 font_roboto text-black ">Loan Work-Outs</p>
+           </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- We Deal With -->
+    <section class=" margin_top_150">
+      <div class="custom_container">
+        <div class="row m-0 p-0">
+          <div class="col-md-7 p-0 ps-md-5 pb-md-5">
+           <div class="pt-sm-2 ps-sm-2 pt-md-5 ps-md-5 ms-md-4">
+            <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
+              <div class="line_heading"></div>
+              <p class=" fs_xsm Letter_space_03 ms-2 color_peach text-uppercase fw_700 font_roboto">
+                We deal with
+              </p>
+            </div>
+            <h2 class="letter_space_01 text-white font_roboto line_height_100 fw_700 fs_3xl mt-3">
+              Business <span class="d-xl-block">& Corporate</span>
+            </h2>
+            <p
+              class="font_opacity_07 fs_lght font_roboto text-white letter-0-3 mt-5 pt-3"
+            >
+              Structuring of New Business Ventures
+            </p>
+             <hr class="hr_business" />
+            <p class="font_opacity_07 fs_lght font_roboto text-white letter-0-3">
+              Entity Formations
+            </p>
+             <hr class="hr_business" />
+            <p class="font_opacity_07 fs_lght font_roboto text-white letter-0-3">
+              Operating, Shareholder, Partnership,<br />
+              and Joint Venture Agreements
+            </p>
+             <hr class="hr_business" />
+            <p class="font_opacity_07 fs_lght font_roboto text-white letter-0-3">
+              Employment, Severance, and License<br />
+              Agreements
+            </p>
+           </div>
+          </div>
+          <div class="col-md-5 p-0 mt-5 mt-md-0 d-flex justify-content-end align-items-end text-end" >
+          <div class="">
+            <img  src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" />
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+    <!-- Construction -->
+    <section class="bg-white overflow-hidden">
+      <div class="custom_container position-relative">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-6 pt-sm-5 mt-sm-5 mt-md-0 mt-lg-5 d-flex justify-content-center">
+            <img class="img_construction" src="./assets/img/Homepage/webp/construction-bg.webp" alt="">
+          </div>
+          <div class="col-md-6 p-0 ps-sm-5 order-1" >
+          <div class="content p-sm-3 p-4 subject">
+            <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
+              <div class="line_heading"></div>
+              <p class=" fs_xsm Letter_space_03 font_roboto ms-2 color_peach text-uppercase fw_700 font_roboto">
+                We deal with
+              </p>
+            </div>
+            <h2 class="letter_space_01 font_roboto fs_3xl fw_700 text-black">Construction</h2>
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-black mt-4">
+              AIA Contracts
+            </p>
+            <hr class="grey-hr" />
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-black">
+              Construction and Development<br />
+              Agreements
+            </p>
+            <hr class="grey-hr" />
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-black">
+              Access, License Agreements, and<br />
+              RPAPL 881s
+            </p>
+            <hr class="grey-hr" />
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-black">Mechanic's Liens</p>
+          </div>
+        </div>
         </div>
       </div>
     </section>
