--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <section class="">
       <div class="custom_container bg-white">
         <div class="row bg-black p-0">
-          <div class="col-md-6 bg-white p-0">
+          <div class="col-12 col-md-6  bg-white p-0">
             <img class="img_wdth_section_real" src="./assets/img/Homepage/svg/deal-bg-mb.svg" alt="">
           </div>
-          <div class="col-md-6 bg-white p-sm-0 ps-lg-5 col_border_right_bottom ">
+          <div class="col-12 col-md-6  bg-white p-sm-0 ps-lg-5 col_border_right_bottom ">
            <div class="ps-sm-3 ps-md-5 p-md-3 pb-4 pb-lg-0">
             <div class="d-flex align-items-center mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
@@ -71,7 +71,7 @@
     <section class=" margin_top_150">
       <div class="custom_container">
         <div class="row m-0 p-0">
-          <div class="col-md-7 p-0 ps-md-5 pb-md-5">
+          <div class="col-12 col-md-7 p-0 ps-md-5 pb-md-5">
            <div class="pt-sm-2 ps-sm-2 pt-md-5 ps-md-5 ms-md-4">
             <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
@@ -103,7 +103,7 @@
             </p>
            </div>
           </div>
-          <div class="col-md-5 p-0 mt-5 mt-md-0 d-flex justify-content-end align-items-end text-end" >
+          <div class="col-12 col-md-5 p-0 mt-5 mt-md-0 d-flex justify-content-end align-items-end text-end" >
           <div class="">
             <img  src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" />
           </div>
@@ -115,10 +115,10 @@
     <section class="bg-white overflow-hidden">
       <div class="custom_container position-relative">
         <div class="row d-flex align-items-center">
-          <div class="col-md-6 pt-sm-5 mt-sm-5 mt-md-0 mt-lg-0 d-flex justify-content-center">
+          <div class="col-12 col-md-6 pt-sm-5 mt-sm-5 mt-md-0 mt-lg-0 d-flex justify-content-center">
             <img class="img_construction" src="./assets/img/Homepage/webp/construction-bg.webp" alt="">
           </div>
-          <div class="col-md-6 p-0 ps-sm-5 order-1" >
+          <div class="col-12 col-md-6 p-0 ps-sm-5 order-1" >
           <div class="content p-sm-3 p-4 subject">
             <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
