--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <body class="bg-black">
     <!-- Section Real Estate -->
     <section class="">
+      
       <div class="custom_container bg-white">
         <div class="row bg-black p-0">
           <div class="col-12 col-md-6  bg-white p-0">
@@ -151,7 +152,7 @@
     <section class=" margin_top_150">
       <div class="custom_container">
         <div class="row p-lg-5 ps-lg-5 mb_150">
-          <div class="col-md-7 p-0 ps-sm-5" >
+          <div class="col-12 col-md-7 p-0 ps-sm-5" >
           <div class="content p-sm-3 p-4 subject">
             <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
@@ -191,7 +192,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-5 position-relative">
+        <div class="col-12 col-md-5 position-relative">
           <div class="hammer_pos_absoulute position-absolute"><img class="hammer_img" src="./assets/img/Homepage/webp/litigation-img.webp" alt=""></div>
         </div>
         </div>
