--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./assets/css/root.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/root.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -17,9 +19,9 @@
             <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp" alt=" characters_img">
         </div>
         <nav>
-            <div class=" my_container">
-                <div class=" row">
-                    <div class=" col-lg-2 p-5">
+            <div class="my_container">
+                <div class="row align-content-center">
+                    <div class="col-lg-2 p-5 ">
                         <div>
                             <img class=" logo_w_18 0" src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
                         </div>
@@ -45,7 +47,7 @@
 
                         </ul>
                     </div>
-                    <div class=" col-lg-5 mt-3 pt-5 z-1 position-relative   border-grey-left  ">
+                    <div class="col-lg-5 mt-3 pt-5 z-1 position-relative border-grey-left  ">
                         <div class="">
 
                         </div>
@@ -53,17 +55,16 @@
                             REAL ESTATE. BUSINESS. CONSTRUCTION.
                         </p>
                         <h1 class=" text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-4 ">we <span
-                                class=" d-block">are</span> <span class="text_orange d-block"> advocates.</span>
+                                class=" d-lg-block">are</span> <span class="text_orange d-block"> advocates.</span>
                         </h1>
                         <div class=" pt-5 mt-5">
                             <img src="./assets/img/Homepage/svg/scroll-down.svg" alt=" scroll_down">
                         </div>
                     </div>
-                    <div class=" col-lg-5 z-2 d-lg-none   ">
-                        <img class="characters_img z-n1   " src="./assets/img/Homepage/svg/header-bg.svg"
-                            alt=" header_bg">
-                        <img class=" " src="./assets/img/Homepage/webp/characters-home.webp" alt=" characters_img">
-
+                    <div class=" col-lg-5 z-2 d-lg-none position-relative  ">
+                        <img class="header_bg z-n1" src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
+                        <img class=" characts_img " src="./assets/img/Homepage/webp/characters-home.webp"
+                            alt=" characters_img">
                     </div>
                 </div>
             </div>
