--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>BF Law Firm</title>
 <meta name="title" content="BF Law Firm" />
 <meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://metatags.io/" />
