--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   </head>
   <body class="">
     <!-- Section Real Estate -->
-    <section class="bg-black">
+    <section class="bg-black section_margin_top">
       <div class="custom_container bg-white">
         <div class="row bg-black p-0">
           <div class="col-12 col-md-6 order-1 order-md-0 bg-white p-0">
-            <img class="img_wdth_section_real" src="./assets/img/Homepage/svg/deal-bg.svg" alt="">
+            <img class="img_wdth_section_real" src="./assets/img/Homepage/webp/tower_img.webp" alt="">
           </div>
           <div class="col-12 col-md-6 order-0 order-md-1 bg-white p-sm-0 ps-lg-5 col_border_right_bottom ">
            <div class="ps-sm-3 ps-md-5 p-md-3 pb-4 pb-lg-0">
@@ -69,11 +69,11 @@
       </div>
     </section>
     <!-- We Deal With -->
-    <section class=" padding_top_150 bg-black">
+    <section class=" padding_top_150 bg-black section_margin_top">
       <div class="custom_container pt-4">
         <div class="row m-0 p-0">
-          <div class="col-12 col-md-7 p-0 ps-md-5 pb-md-5">
-           <div class="pt-sm-2 ps-sm-2 pt-md-5 ps-md-5 ms-md-4">
+          <div class="col-12 col-md-7 p-0 ps-lg-5 pb-md-5">
+           <div class="pt-sm-2 ps-sm-2 pt-lg-5 ps-md-5 ms-md-4">
             <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
               <p class=" fs_xsm Letter_space_03 ms-2 color_peach text-uppercase fw_700 font_roboto">
@@ -108,22 +108,22 @@
           </div>
           <div class="col-12 col-md-5 p-0 mt-5 mt-md-0 d-flex justify-content-end align-items-end text-end" >
           <div class="">
-            <img  src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" />
+            <img src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" alt="dollar_img"/>
           </div>
         </div>
         </div>
       </div>
     </section>
     <!-- Construction -->
-    <section class="bg-white overflow-hidden">
+    <section class="bg-white overflow-hidden section_margin_top">
       <div class="custom_container position-relative">
-        <div class="row d-flex align-items-center">
-          <div class="col-12 col-md-6 order-1 order-md-0 pt-md-5 mt-md-5 mt-md-0 mt-lg-0 d-flex justify-content-center">
+        <div class="row ">
+          <div class="col-12 col-md-6 order-1 order-md-0 pt-lg-5 pt-3 mt-md-0 d-flex justify-content-center">
             <img class="img_construction" src="./assets/img/Homepage/webp/construction-bg.webp" alt="">
           </div>
-          <div class="col-12 col-md-6 order-0 order-md-1 p-0 ps-md-5" >
+          <div class="col-12 col-md-6 order-0 order-md-1 p-0 ps-md-5 mt-md-5 pt-md-5" >
           <div class="content p-sm-3 p-4 subject">
-            <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
+            <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-xl-4">
               <div class="line_heading"></div>
               <p class=" fs_xsm Letter_space_03 font_roboto ms-2 color_peach text-uppercase fw_700 font_roboto">
                 We deal with
@@ -151,9 +151,9 @@
       </div>
     </section>
     <!-- Litigation -->
-    <section class=" padding_top_150 pb-4 pb-md-0 bg-black">
+    <section class=" padding_top_150 pb-4 pb-md-0 bg-black section_margin_top">
       <div class="custom_container">
-        <div class="row p-lg-5 ps-lg-5 mb_150">
+        <div class="row p-lg-5 ps-lg-5 pb_100">
           <div class="col-12 col-md-6 order-1 order-md-0 p-0 ps-md-5" >
           <div class="content p-sm-3 p-4 subject">
             <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
@@ -204,15 +204,15 @@
     <section class=" bg-white">
       <div class="custom_container">
          <div>
-          <h1 class="line_height_100 font_roboto text-uppercase text-black fw_800 fs_4xl ps-md-5 ms-md-5 ps-md-3 pt-md-5 pt-4">
+          <h1 class="line_height_100 font_roboto text-uppercase text-black fw_800 fs_4xl ps-lg-5 ms-md-3 ms-lg-5 ps-md-3 pt-md-5 pt-4">
             News
           </h1>
-          <p class="line_height_100 font_roboto font_opacity_07 text-black fs_xsm ps-md-5 ms-md-5 mt-2 ps-sm-3 ps-2">
+          <p class="line_height_100 font_roboto font_opacity_07 text-black fs_xsm ps-lg-5 ms-md-4 ms-lg-5 mt-2 ps-sm-3 ps-2">
             Developments, trends, and opinions that move us at Boddoohi &
             Friedlander LLP, but also beyond.
           </p>
          </div>
-          <div class="news-slider align-items-center mt-3 mt-sm-5 pb-5 ps-lg-5 ms-lg-5 p-md-5 d-flex justify-content-center">
+          <div class="news-slider align-items-center mt-3 mt-sm-5 pb-5 ps-lg-5 ms-lg-5 ps-md-5 d-flex justify-content-center">
             <div class="slide">
               <div class="slide-content">
                 <a class="text-black" href="https://drive.google.com/file/d/1b79IHgWhT61aBNyW3oAHHSloIhkpIUsb/view" target="_blank" rel="noopener noreferrer" >
@@ -466,7 +466,7 @@
           <div class="col-lg-7 ">
             <div class=" section_margin_left">
               <img class="img_comma" src="./assets/img/Homepage/svg/inverted-coma.svg" alt="">
-              <h3 class="letter_space_01 font_roboto text-white mt-3 mt-sm-5 pt-sm-5 fs_xl line_height_100 fw_700">
+              <h3 class="letter_space_01 font_roboto text-white mt-3 mt-sm-5 pt-lg-5 fs_xl line_height_100 fw_700">
                 Milad is an experienced <span class=" d-lg-block">litigator and problem solver</span><span class="d-lg-block">who has
                   represented clients</span><span class="d-lg-block"> in a wide variety of forums</span><span class="d-lg-block"> throughout New
                     York City.</span>
@@ -518,10 +518,10 @@
           <div class="col-lg-7 order-1 order-lg-0">
             <img class="img_cherry" src="./assets/img/Homepage/webp/co-founder2.webp" alt="">
           </div>
-            <div class="col-lg-5 order-0 order-lg-1 pt-lg-5 mt-lg-5">
-              <h3 class="letter_space_01 font_roboto text-black mt-5 pt-sm-5 fs_xl line_height_100 fw_700">
+            <div class="col-lg-5 order-0 order-lg-1 pt-lg-5 mt-xl-5">
+              <h3 class="letter_space_01 font_roboto text-black mt-5 pt-lg-5 fs_xl line_height_100 fw_700">
                 Cheryl has represented a <span class="d-lg-block">wide variety of clients in</span><span class="d-lg-block">transactional matters, from</span><span class="d-lg-block">individuals and small</span><span class="d-lg-block"> businesses to domestic and</span><span class="d-lg-block">multi-national billion-</span><span class="d-lg-block">dollar companies.</span></h3>
-              <h4 class="letter_space_01 font_roboto text-black line_height_100 fw_400 fs_md mb-0 mt-sm-5 mt-3">
+              <h4 class="letter_space_01 font_roboto text-black line_height_100 fw_400 fs_md mb-0 mt-md-5 mt-3">
                 Cheryl Friedlander
               </h4>
               <p class="letter_space_01 font_roboto line_height_100 fw_600 fs_xsm text-black font_opacity_07 mb-3 pt-1">
@@ -578,6 +578,22 @@
           dots: false,
           pauseOnHover: false,
           responsive: [
+            {
+              breakpoint: 1024,
+              settings: {
+                slidesToShow: 1,
+                centerMode: false,
+                variableWidth: true,
+              },
+            },
+            {
+              breakpoint: 992,
+              settings: {
+                slidesToShow: 1,
+                centerMode: false,
+                variableWidth: true,
+              },
+            },
             {
               breakpoint: 769,
               settings: {
