--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               Residential Properties
             </p>
             <hr class="grey-hr" />
-                <p class="font_opacity_07 fs_lght fw_600 line_height_100 text-black ">
+                <p class="font_opacity_07 font_roboto fs_lght fw_600 line_height_100 text-black ">
                   General Counseling to Cooperatives and<br />
                   Condominiums
                 </p>
@@ -69,7 +69,7 @@
       </div>
     </section>
     <!-- We Deal With -->
-    <section class=" padding_top_150 bg-black section_margin_top">
+    <section class=" padding_top_150 bg-black section_margin_top ">
       <div class="custom_container pt-4">
         <div class="row m-0 p-0">
           <div class="col-12 col-md-7 p-0 ps-lg-5 pb-md-5">
@@ -85,22 +85,22 @@
               
             </h2>
             <p
-              class="font_opacity_07 fs_lght font_roboto text-white letter-0-3 mt-md-5 pt-3"
+              class="font_opacity_07 fs_lght font_roboto fw_600 text-white letter-0-3 mt-md-5 pt-3"
               
             >
               Structuring of New Business Ventures
             </p>
              <hr class="hr_business" />
-            <p class="font_opacity_07 fs_lght font_roboto text-white letter-0-3">
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-white letter-0-3">
               Entity Formations
             </p>
              <hr class="hr_business" />
-            <p class="font_opacity_07 fs_lght font_roboto text-white letter-0-3">
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-white letter-0-3">
               Operating, Shareholder, Partnership,<br />
               and Joint Venture Agreements
             </p>
              <hr class="hr_business" />
-            <p class="font_opacity_07 fs_lght font_roboto text-white letter-0-3">
+            <p class="font_opacity_07 fs_lght font_roboto fw_600 text-white letter-0-3">
               Employment, Severance, and License<br />
               Agreements
             </p>
@@ -121,9 +121,9 @@
           <div class="col-12 col-md-6 order-1 order-md-0 pt-lg-5 pt-3 mt-md-0 d-flex justify-content-center">
             <img class="img_construction" src="./assets/img/Homepage/webp/construction-bg.webp" alt="">
           </div>
-          <div class="col-12 col-md-6 order-0 order-md-1 p-0 ps-md-5 mt-md-5 pt-md-5" >
+          <div class="col-12 col-md-6 order-0 order-md-1 p-0 ps-md-5 " >
           <div class="content p-sm-3 p-4 subject">
-            <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-xl-4">
+            <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-xl-4 padding_top_200">
               <div class="line_heading"></div>
               <p class=" fs_xsm Letter_space_03 font_roboto ms-2 color_peach text-uppercase fw_700 font_roboto">
                 We deal with
@@ -154,7 +154,7 @@
     <section class=" padding_top_150 pb-4 pb-md-0 bg-black section_margin_top">
       <div class="custom_container">
         <div class="row p-lg-5 ps-lg-5 pb_100">
-          <div class="col-12 col-md-6 order-1 order-md-0 p-0 ps-md-5" >
+          <div class="col-12 col-md-6 p-0 ps-md-5" >
           <div class="content p-sm-3 p-4 subject">
             <div class="d-flex align-items-center ms-md-4 mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
@@ -194,7 +194,7 @@
             </p>
           </div>
         </div>
-        <div class="col-12 col-md-6 order-0 order-md-1 position-relative d-flex justify-content-center align-items-center mt-5">
+        <div class="col-12 col-md-6 position-relative d-flex justify-content-center align-items-center mt-5">
           <div class="hammer_pos_absoulute"><img class="hammer_img" src="./assets/img/Homepage/webp/litigation-img.webp" alt=""></div>
         </div>
         </div>
@@ -203,22 +203,35 @@
     <!-- News -->
     <section class=" bg-white">
       <div class="custom_container">
-         <div>
-          <h1 class="line_height_100 font_roboto text-uppercase text-black fw_800 fs_4xl ps-lg-5 ms-md-3 ms-lg-5 ps-md-3 pt-md-5 pt-4">
-            News
-          </h1>
-          <p class="line_height_100 font_roboto font_opacity_07 text-black fs_xsm ps-lg-5 ms-md-4 ms-lg-5 mt-2 ps-sm-3 ps-2">
-            Developments, trends, and opinions that move us at Boddoohi &
-            Friedlander LLP, but also beyond.
-          </p>
-         </div>
-          <div class="news-slider align-items-center mt-3 mt-sm-5 pb-5 ps-lg-5 ms-lg-5 ps-md-5 d-flex justify-content-center">
+        <div class="d-md-flex justify-content-between">
+          <div>
+            <h1 class="line_height_100 font_roboto text-uppercase text-black fw_800 fs_4xl ps-lg-5 ms-md-3 ms-lg-5 ps-md-3 pt-md-5 pt-4">
+              News
+            </h1>
+            <p class="line_height_100 font_roboto fw_600 font_opacity_07 text-black fs_xsm ps-lg-5 ms-md-4 ms-lg-5 mt-2 ps-sm-3 ps-2">
+              Developments, trends, and opinions that move us at Boddoohi &
+              Friedlander LLP, but also beyond.
+            </p>
+           </div>
+           <div class="bttn_slide">
+            <button class="prev-btn border-0 bg-transparent">
+              <span>
+              <svg class="bttn_svg" width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.3706 25.5H61.4999V28.5H19.3706V33L10.4999 27L19.3706 21V25.5Z" fill="#FE6A5B"></path></svg>
+            </span>
+          </button>
+            <button class="next-btn border-0 bg-transparent">
+              <span>
+              <svg class="bttn_svg" width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M52.6294 25.5H10.5001V28.5H52.6294V33L61.5001 27L52.6294 21V25.5Z" fill="#FE6A5B"></path></svg>
+            </span></button>
+           </div>
+        </div>
+          <div class="news-slider align-items-center mt-3 mt-md-5 pb-5 ps-lg-5 ms-lg-5 ps-md-5 d-flex justify-content-center">
             <div class="slide">
               <div class="slide-content">
                 <a class="text-black" href="https://drive.google.com/file/d/1b79IHgWhT61aBNyW3oAHHSloIhkpIUsb/view" target="_blank" rel="noopener noreferrer" >
                   <div class="content p-2 p-sm-4">
                     <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black"> Big win in the SDNY </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2" >
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2" >
                       We obtained a massive win in Federal Court, in the
                       Southern District of New York, on behalf of our wonderful
                       client, an international travel company. In this internet
@@ -304,7 +317,7 @@
                     <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                       Esopus Updates Proposed Marina Camping Rules
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       Milad Boddoohi Quoted in the Daily Freeman Concerning The
                       Town of Esopus’ Passage of Zoning Regulations Governing
                       Marinas.
@@ -324,7 +337,7 @@
                     <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                       Esopus Seeks to Revise Zoning for Marina RV Lodging
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       Milad Boddoohi quoted in the Daily Freeman concerning Town
                       of Esopus vs. Castaways Marina
                     </p>
@@ -344,7 +357,7 @@
                       Esopus Town Board Schedules Public Hearing On Proposed Law
                       Allowing Camping At Marinas Along Rondout Creek
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       Milad Boddoohi quoted in the Daily Freeman concerning
                       proposed law revising Town of Esopus’ zoning regulations.
                     </p>
@@ -363,7 +376,7 @@
                     <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                       Boddoohi & Friedlander: New Law Alert:
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       On December 22, 2021, the New York State Legislature
                       passed (and Governing Hochul signed into law) a law
                       exempting cooperatives from several provisions of the
@@ -385,7 +398,7 @@
                       Milad Boddoohi in the New York Law Journal: Googling Your
                       Way To Victory
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       A closer look at an underutilized tool rooted in the CPLR
                     </p>
                   </div>
@@ -405,7 +418,7 @@
                       Condominium and Cooperative Protection and Abuse Relief
                       Act.
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       Many cooperatives and condominiums have, for decades,
                       overlooked potent statutory rights, enabling them to
                       recapture building amenities currently under long-term,
@@ -427,7 +440,7 @@
                       Milad Boddoohi in the New York Law Journal: Not Out of
                       Time, Not Out of Luck
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       An unsettled aspect of the Condominium and Cooperative
                       Protection and Abuse Act may offer new hope.
                     </p>
@@ -447,7 +460,7 @@
                       Milad Boddoohi in the New York Law Journal: When a Sex
                       Offender Moves In
                     </h3>
-                    <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght fw_400 pe-2">
+                    <p class="font_roboto letter_space_01 line_height_100 fs_lght fw_400 pe-2">
                       What, if anything, is the obligation of a board of a
                       condominium or cooperative when a convicted sex offender
                       moves in?
@@ -474,7 +487,7 @@
               <h4 class="letter_space_01 font_roboto text-white line_height_100 fw_400 fs_md mb-0 mt-3 mt-sm-5">
                 Attorney Milad Boddoohi
               </h4>
-              <p class="letter_space_01 font_roboto line_height_100 fw_600 fs_xsm text-white font_opacity_07 mb-3 pt-1">
+              <p class="letter_space_01 font_roboto line_height_100 fw_600 fs_xsm text-white font_opacity_07 mb-3 pt-2">
                 Partner & Co-Founder
               </p>
               <button class="fs_xsm fw_600 font_roboto button_bio text-white">Bio</button>
@@ -512,23 +525,23 @@
       </div>
     </section>
     <!-- Chery -->
-    <section class=" position-relative">
+    <section class=" position-relative height_section">
       <div class="custom_container">
-        <div class="row">
-          <div class="col-lg-7 order-1 order-lg-0">
-            <img class="img_cherry" src="./assets/img/Homepage/webp/co-founder2.webp" alt="">
+        <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-lg-6 order-1 order-lg-0">
+            <img class="img_cherry" src="./assets/img/Homepage/webp/co-founder2 (1).png" alt="">
           </div>
-            <div class="col-lg-5 order-0 order-lg-1 pt-lg-5 mt-xl-5">
-              <h3 class="letter_space_01 font_roboto text-black mt-5 pt-lg-5 fs_xl line_height_100 fw_700">
+            <div class="col-lg-5 order-0 order-lg-1 margin_col">
+              <h3 class="letter_space_01 font_roboto text-black fs_xl line_height_100 fw_700">
                 Cheryl has represented a <span class="d-lg-block">wide variety of clients in</span><span class="d-lg-block">transactional matters, from</span><span class="d-lg-block">individuals and small</span><span class="d-lg-block"> businesses to domestic and</span><span class="d-lg-block">multi-national billion-</span><span class="d-lg-block">dollar companies.</span></h3>
               <h4 class="letter_space_01 font_roboto text-black line_height_100 fw_400 fs_md mb-0 mt-md-5 mt-3">
                 Cheryl Friedlander
               </h4>
-              <p class="letter_space_01 font_roboto line_height_100 fw_600 fs_xsm text-black font_opacity_07 mb-3 pt-1">
+              <p class="letter_space_01 font_roboto line_height_100 fw_600 fs_xsm text-black font_opacity_07 mb-3 pt-2">
                 Partner & Co-Founder
               </p>
               <button class="fs_xsm fw_600 font_roboto button_bio text-white">Bio</button>
-              <div class="margin_icon d-flex gap-3">
+              <div class="mt-3 mt-lg-5 d-flex gap-3">
                 <span>
                   <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
@@ -579,7 +592,15 @@
           pauseOnHover: false,
           responsive: [
             {
-              breakpoint: 1024,
+              breakpoint: 1210,
+              settings: {
+                slidesToShow: 3,
+                centerMode: false,
+                variableWidth: true,
+              },
+            },
+            {
+              breakpoint: 1028,
               settings: {
                 slidesToShow: 1,
                 centerMode: false,
@@ -613,6 +634,27 @@
           ],
         });
       });
+
+      $(".prev-btn").click(function () {
+		$(".news-slider").slick("slickPrev");
+	});
+
+	$(".next-btn").click(function () {
+		$(".news-slider").slick("slickNext");
+	});
+	$(".prev-btn").addClass("slick-disabled");
+	$(".news-slider").on("afterChange", function () {
+		if ($(".slick-prev").hasClass("slick-disabled")) {
+			$(".prev-btn").addClass("slick-disabled");
+		} else {
+			$(".prev-btn").removeClass("slick-disabled");
+		}
+		if ($(".slick-next").hasClass("slick-disabled")) {
+			$(".next-btn").addClass("slick-disabled");
+		} else {
+			$(".next-btn").removeClass("slick-disabled");
+		}
+	});
     </script>
   </body>
   
