--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
    <section class=" bg-white pt-lg-5 pb-lg-5  ">
     <div class=" coustam_container  d-flex justify-content-center pt-5 pb-5">
         <h2 class="advise font_roboto fs_3xl ">
-            <span class="color_peach d-md-block">We advise</span>
-            <span class="color_peach d-md-block">clients <span class=" text-black">in New York</span></span>
-            <span class=" d-md-block">City and the</span>
-            <span class=" d-md-block"> Hudson Valley</span>
-            <span class=" d-md-block"> through any</span>
+            <span class="color_peach d-xxl-block">We advise</span>
+            <span class="color_peach d-xxl-block">clients <span class=" text-black">in New York</span></span>
+            <span class=" d-xxl-block">City and the</span>
+            <span class=" d-xxl-block"> Hudson Valley</span>
+            <span class=" d-xxl-block"> through any</span>
             transaction or dispute.
         </h2>
     </div>
