all-code-update

--- a/index.html
+++ b/index.html
@@ -33,73 +33,76 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body class="">
-    <div class=" position-relative min_h_890 overflow-hidden bg-black pb-lg-5">
-      <div class=" z-n1 d-lg-block d-none">
-          <img class=" headers_bg " src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
-          <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp" alt=" characters_img">
-      </div>
-      <nav>
-          <div class="custom_container">
-              <div class="row align-content-center pb-lg-3">
-                  <div
-                      class="col-lg-2 p-lg-4  p-3  d-flex flex-lg-column  align-items-center justify-content-between justify-content-lg-start ">
-                      <div class=" z-3">
-                          <img class=" logo_w_180 " src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
-                      </div>
-                      <label for="menuicon">
-                          <span></span>
-                          <span></span>
-                          <span></span>
-                      </label>
-                      <input type="checkbox" id="menuicon" hidden>
-                      <ul class=" sm-screen">
-                          <li class="nav_links_padding nav_line mt-4"><a href=""
-                                  class="fs_xsm  nav_links font_roboto">Home</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">Practice
-                                  Areas</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">News</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">Team</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">Contact</a>
-                          </li>
-
-                      </ul>
-                  </div>
-                  <div class="col-lg-5 mt-lg-3 pt-lg-5 z-1 position-relative border-grey-left  ">
-                      <div>
-                          <p class=" text-white fs_xsm  real_estate text-uppercase font_roboto mt-lg-5 pt-5">
-                              REAL ESTATE. BUSINESS. CONSTRUCTION.
-                          </p>
-                          <h1 class=" text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-4 ">we <span
-                                  class=" d-lg-block">are</span> <span class="text_orange d-block"> advocates.</span>
-                          </h1>
-                          <div class=" pt-lg-5 mt-lg-5 ">
-                              <img class="scroll_down " src="./assets/img/Homepage/svg/scroll-down.svg"
-                                  alt=" scroll_down">
-                          </div>
-                      </div>
-                  </div>
-                  <div class=" col-lg-5 z-2 d-lg-none position-relative px-0 margin_negative sm p-0 d-flex  ">
-                      <img class="header_bg  z-n1" src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
-                      <img class=" characts_img   ms-auto" src="./assets/img/Homepage/webp/characters-home.webp"
-                          alt=" characters_img">
-                  </div>
-              </div>
-          </div>
-      </nav>
-  </div>
+   <div class=" position-relative min_h_100 overflow-hidden bg-black">
+            <div class=" z-n1 d-lg-block d-none">
+                <img class=" headers_bg " src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
+                <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp"
+                    alt=" characters_img">
+            </div>
+            <nav>
+                <div class="coustam_container">
+                    <div class="row align-content-center">
+                        <div
+                            class="col-lg-2 p-lg-4 p-xl-5 px-0 d-flex flex-lg-column  align-items-center justify-content-between justify-content-lg-start ">
+                            <div class=" z-3 ps-2 ">
+                                <img class=" logo_w_180 ms-md-5 pt-2 pt-lg-0   "
+                                    src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
+                            </div>
+                            <label for="menuicon">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </label>
+                            <input type="checkbox" id="menuicon" hidden>
+                            <ul class=" sm-screen pt-lg-5">
+                                <li class="nav_links_padding nav_line "><a href="main.html"
+                                        class="fs_xsm  nav_links font_roboto">Home</a></li>
+                                <li class="nav_links_padding nav_line"><a href=""
+                                        class="fs_xsm nav_links font_roboto">Practice
+                                        Areas</a></li>
+                                <li class="nav_links_padding nav_line"><a href=""
+                                        class="fs_xsm nav_links font_roboto">News</a></li>
+                                <li class="nav_links_padding nav_line"><a href=""
+                                        class="fs_xsm nav_links font_roboto">Team</a></li>
+                                <li class="nav_links_padding nav_line"><a href=""
+                                        class="fs_xsm nav_links font_roboto">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="Home" class="col-lg-5 pt-lg-5 z-1 position-relative border-grey-left  ">
+                            <div class=" ms-1 pt-3">
+                                <p class=" text-white fs_xsm  real_estate text-uppercase font_roboto mt-lg-5 pt-5">
+                                    REAL ESTATE. BUSINESS. CONSTRUCTION.
+                                </p>
+                                <h1 class=" text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-4 ">we
+                                    <span class=" d-block">are</span> <span class="text_orange d-block">
+                                        advocates.</span>
+                                </h1>
+                                <div class=" pt-lg-5 mt-lg-5 ">
+                                    <a href="#press"> <img class="scroll_down z-3 "
+                                            src="./assets/img/Homepage/svg/scroll-down.svg" alt=" scroll_down"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class=" col-lg-5 z-2 d-lg-none position-relative px-0 z-n1 margin_negative sm p-0 d-flex  ">
+                            <img class="header_bg  z-n1" src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
+                            <img class=" characts_img   ms-auto" src="./assets/img/Homepage/webp/characters-home.webp"
+                                alt=" characters_img">
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
    <!-- ---------------------section_2 start------------------------- -->
-   <section class=" bg-white pt-lg-5 pb-lg-5  ">
+   <section id="press" class=" bg-white pt-lg-5 pb-lg-5 section_real_margin_top">
     <div class=" coustam_container  d-flex justify-content-center pt-5 pb-5">
         <h2 class="advise font_roboto fs_3xl ">
-            <span class="color_peach d-xxl-block">We advise</span>
-            <span class="color_peach d-xxl-block">clients <span class=" text-black">in New York</span></span>
-            <span class=" d-xxl-block">City and the</span>
-            <span class=" d-xxl-block"> Hudson Valley</span>
-            <span class=" d-xxl-block"> through any</span>
+            <span class="color_peach d-md-block">We advise</span>
+            <span class="color_peach d-md-block">clients <span class=" text-black">in New York</span></span>
+            <span class=" d-md-block">City and the</span>
+            <span class=" d-md-block"> Hudson Valley</span>
+            <span class=" d-md-block"> through any</span>
             transaction or dispute.
         </h2>
     </div>
@@ -644,10 +647,10 @@
       </div>
     </section>
     <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black">
-      <div class=" coustam_container">
-          <div class=" row pt-5 pb-5  ">
-              <div class=" col-sm-6  ">
-                  <div class=" ms-lg-5">
+      <div class=" container  main_container mx-auto ">
+          <div class=" row pt-5 pb-5 d-flex justify-content-center  align-items-center">
+              <div class=" col-sm-6 ">
+                  <div class=" ">
                       <h2 class=" Anything text-white fs_xl font_roboto ">
                           <span class=" d-sm-block"> Anything you</span>
                           need, we are here.
@@ -676,8 +679,8 @@
                       <p class=" text-white  fs_xsm  fw_400 font_roboto">Call or Text Us</p>
                       <ul>
                           <li> <a href="tel:+
-                      (347) 252 9922
-                    " class=" text-white fs_xsm fw_400 font_roboto">
+                  (347) 252 9922
+                " class=" text-white fs_xsm fw_400 font_roboto">
                                   (347) 252 9922
                               </a></li>
                           <li> <a href="mailto:hello@thebflawfirm.com"
@@ -685,7 +688,7 @@
                       </ul>
                   </div>
               </div>
-              <div class="col-sm-6 mt-5 ">
+              <div class="col-sm-6 mt-4 mt-sm-0  ">
                   <div>
                       <input type="text" required="" class="form_contact" id="contact-form-name"
                           placeholder="Your Name">
@@ -704,25 +707,24 @@
                           id="contact-form-message" rows="3"></textarea>
                   </div>
                   <div class="mt-3 pt-1">
-                      <button type="submit" class=" contact_form_btn fs_xsm  text-white">
+                      <button type="submit" class=" contact_form_btn fs_xsm font_roboto  text-white">
                           Submit message
                       </button>
                   </div>
               </div>
-
           </div>
       </div>
   </section>
    <!-- ---------------------footer_start-------------------------- -->
-   <section class="bg-black">
+   <section class="bg-black footer_margin">
     <div class="coustam_container ">
-        <div class="row justify-content-center text-center">
-            <div class="col-4 d-none d-lg-block px-0">
+        <div class="row justify-content-center justify-content-lg-between text-center">
+            <div class="col-4 col-lg-2 d-none d-lg-block px-0 p-0">
                 <div>
-                    <img src="./assets/img/Homepage/svg/footer-img.svg" alt="footer_img">
+                    <img class="mt-3" src="./assets/img/Homepage/svg/footer-img.svg" alt="footer_img">
                 </div>
             </div>
-            <div class="col-8 mt-lg-5 d-flex justify-content-center  flex-column ">
+            <div class="col-8 col-lg-9 mt-lg-5 d-flex justify-content-center  flex-column ">
                 <div class=" pt-5 mt-lg-5 d-lg-flex ">
                     <img class=" footer_logo_width " src="./assets/img/Homepage/svg/logo.svg"
                         alt="footer_logo_width">
@@ -730,8 +732,6 @@
                 <div class=" footer_line my-4 mt-5"></div>
                 <div class="  d-lg-flex   mt-2 gap_178  item-center">
                     <ul class="d-lg-flex justify-content-center gap-3 gap-xxl-5  ">
-                        <li> <a class=" text-white fs_xsm font_roboto fw_500 " href="#banner-top">Back
-                                to Top</a></li>
                         <li> <a href="./index.html#practice"
                                 class="   text-white fs_xsm font_roboto fw_500">Practice
                                 Areas</a></li>
@@ -802,6 +802,7 @@
         </div>
     </div>
 </section>
+<button id="backToTopBtn"><img src="./assets/img/Homepage/svg/back_to_top.svg" alt="backtotop"></button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -811,6 +812,30 @@
     integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
   </script>
+  <script>
+    // Get a reference to the back to top button
+  var backToTopBtn = document.getElementById("backToTopBtn");
+  
+  // Add a click event listener to scroll to the top when the button is clicked
+  backToTopBtn.addEventListener("click", function() {
+    // Scroll to the top of the page smoothly
+    window.scrollTo({
+      top: 0,
+      behavior: "smooth"
+    });
+  });
+  
+  // Show or hide the back to top button based on the user's scroll position
+  window.addEventListener("scroll", function() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      // If the user has scrolled down more than 20px from the top, show the button
+      backToTopBtn.classList.add("visible");
+    } else {
+      // Otherwise, hide the button
+      backToTopBtn.classList.remove("visible");
+    }
+  });
+    </script>
     <script type="text/javascript">
       $(document).ready(function () {
         $(".news-slider").slick({
